# lecturn

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  test_book.md
.github/workflows/: ci.yml
docs/: DEV.md  SETUP.md  USAGE.md
server/: README.md  pyproject.toml
server/src/lecturn_kokoro_server/: __init__.py  app.py  audio.py  cli.py  engine.py  voices.py
server/tests/: conftest.py  test_app.py  test_audio.py  test_contract.py  test_engine.py
src/textbook_audiobook/: __init__.py  __main__.py  assembler.py  chunker.py  cleaner.py  cli.py  config.py  models.py  pipeline.py  tokens.py  tts.py
src/textbook_audiobook/loaders/: __init__.py  base.py  epub_loader.py  markdown_loader.py  pdf_loader.py  text_loader.py
src/textbook_audiobook/providers/: __init__.py  base.py  openrouter.py  stepfun.py
tests/: conftest.py  test_assembler.py  test_chunker.py  test_cleaner.py  test_cli.py  test_config.py  test_fallback.py  test_loaders.py  test_pipeline.py  test_pipeline_local.py  test_pipeline_openrouter.py  test_providers.py  test_tokens.py  test_tts.py  test_tts_local.py  test_tts_openrouter.py
