[project]
name = "textbook-audiobook"
version = "0.1.0"
description = "Convert textbooks (PDF/EPUB/TXT/MD) into narrated audiobooks using StepFun's TTS API."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "textbook-audiobook contributors" }]
keywords = ["audiobook", "tts", "stepfun", "pdf", "epub"]

dependencies = [
    "openai>=1.40",
    "pymupdf>=1.24",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pydub>=0.25.1",
    # pydub imports the stdlib `audioop` module, which was removed in Python
    # 3.13. The PyPI backport restores it there; on 3.12 this is a no-op.
    "audioop-lts>=0.2; python_version >= '3.13'",
    "mutagen>=1.47",
    "typer>=0.12",
    "rich>=13.7",
    # Token counting for the provider input-size guard (tokens.py). tiktoken
    # downloads encoding files on first use; the code falls back to a heuristic
    # offline so the test suite stays network-free.
    "tiktoken>=0.13.0",
]

[project.scripts]
lecturn = "textbook_audiobook.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/textbook_audiobook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
